# wcag-review-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_mock.py
.github/workflows/: analyze-pr.yml
data/: mock_api_response.json  report_template.html  review_prompt.md
site/: index.html
src/: __init__.py  anthropic_client_factory.py  anthropic_code_review.py  anthropic_prompt_service.py  anthropic_response_parser.py  claude_client.py  diff_filter.py  github_diff_fetcher.py  main.py
tests/: __init__.py  test_anthropic_client_factory.py  test_anthropic_code_review.py  test_anthropic_prompt_service.py  test_anthropic_response_parser.py  test_claude_client.py  test_diff_filter.py  test_github_diff_fetcher.py  test_main.py
